src/components/HomeLands/HomeLands.scss
@import "../../global/style";

#home-lands {
  background: #f3f3f3;
  padding-top: 2rem;
  position: relative;

  .header {
    padding: 0 8rem;
    @media screen and (max-width: 1000px) {
      padding: 0 2rem;
    }

    .title {
      display: flex;
      flex-direction: column;
      margin-bottom: 4rem;
      span {
        color: #333;
        font-size: 3.5rem;
        font-weight: normal;
        line-height: 3.5rem;

        @media screen and (max-width: 1000px) {
          font-size: 2.5rem;
          line-height: 2.5rem;
        }
      }
      .lands-of {
        @include font-sans-serif;
      }
    }

    .subtitle {
      margin-bottom: 4rem;
      p {
        color: #777;
        line-height: 2rem;
        @media screen and (max-width: 1000px) {
          display: inline;
          line-height: 1.5rem;
          font-size: 0.9rem;
        }
      }
    }

    .globe-nav {
      display: flex;
      margin-bottom: 4rem;
      gap: 4rem;
      @media screen and (max-width: 1000px) {
        gap: 2rem;
      }

      .globe-nav-item {
        cursor: pointer;
        background: inherit;
        border: none;
        outline: none;
        @include customhroverride;
        @media screen and (max-width: 1000px) {
          font-size: 0.8rem;
        }
      }
    }
  }

  .map {
    position: relative;
    .globe-image {
      width: 60%;
      @media screen and (max-width: 500px) {
        width: 95%;
      }
    }

    aside.location-data {
      position: absolute;
      right: 0;
      top: 4rem;

      background: #161f1e;
      color: #fff;
      width: 50%;
      padding: 3.5rem;
      @media screen and (max-width: 1000px) {
        padding: 2rem;
      }

      display: flex;
      flex-direction: column;
      gap: 4rem;

      @media screen and (max-width: 1000px) {
        position: relative;
        width: 100%;
        top: -0.25rem;
        gap: 2rem;
      }

      .text-grey {
        color: hsla(0, 0%, 100%, 0.5);
      }

      .nav {
        display: flex;
        gap: 1rem;

        button {
          cursor: pointer;
          background: inherit;
          border: none;
          outline: none;
        }
      }

      .weather {
        display: flex;
        gap: 2rem;
        @media screen and (max-width: 1000px) {
          gap: 0.5rem;
          margin: 2rem 0;
        }

        .temperature,
        .winds,
        .compass {
          display: flex;
          flex-direction: column;
          align-items: center;
          gap: 0.5rem;

          .value {
            font-size: 0.8rem;
          }
        }
      }

      .location {
        display: flex;
        flex-direction: column;
        gap: 1rem;

        @media screen and (max-width: 1000px) {
          gap: 0.5rem;
        }

        .subtitle {
          font-size: 3rem;
          @include font-sans-serif;
          z-index: 2;

          @media screen and (max-width: 1000px) {
            font-size: 2.5rem;
          }
        }
      }

      .coordinates {
        display: flex;
        gap: 1rem;
        align-items: center;

        @media screen and (max-width: 1000px) {
          gap: 0.5rem;
          .coordinate {
            font-size: 0.8rem;
          }
        }
      }

      .image {
        height: 100%;
        position: absolute;
        top: -4rem;
        right: 2.5rem;
        // background: url("https://dxaurk9yhilm4.cloudfront.net/images/775/driftwood3-Map_397186feb8bd51bb37bc24fc2b9b500f.jpg");
        background-size: cover;
        background-repeat: no-repeat;
        width: 270px;

        @media screen and (max-width: 1000px) {
          top: -2rem;
          right: 0;
          height: 60%;
          width: 45%;
        }
        @media screen and (min-width: 500.1px) and (max-width: 1000px) {
          top: -4rem;
          height: 100%;
        }
      }
    }
  }
}

